# Documan-analyz-ai

./: README.md
AI project/: test.ipynb
AI project/doc_project/: README.md  pyproject.toml
AI_project/: key.env  test.py
AI_project/doc_project/: report.md
AI_project/doc_project/src/doc_project/: crew.py  hukuki_rapor.md  main.py  report.md
AI_project/doc_project/src/doc_project/Service/: pdf_handler.py
AI_project/doc_project/src/doc_project/config/: agents.yaml  tasks.yaml
