[project]
name = "doc_project"
version = "0.1.0"
description = "doc_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
doc_project = "doc_project.main:run"
run_crew = "doc_project.main:run"
train = "doc_project.main:train"
replay = "doc_project.main:replay"
test = "doc_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
